# blixou_lib

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/softians/cli_blixou/blixou_lib/: BeautyVideoProcessor.kt  BlixouLibPlugin.kt
android/src/test/kotlin/com/softians/cli_blixou/blixou_lib/: BlixouLibPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/softians/cli_blixou/blixou_lib_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: blixou_lib.podspec
ios/Classes/: BlixouLibPlugin.swift  RTCVideoSource+Beauty.m
lib/: blixou_lib.dart  blixou_lib_method_channel.dart  blixou_lib_platform_interface.dart
src/: CMakeLists.txt  beauty_filter.cpp  beauty_filter.h  blixou_lib.cpp
test/: blixou_lib_method_channel_test.dart  blixou_lib_test.dart
